[tool.poetry]
name = "question-answering"
version = "0.1.0"
description = ""
authors = ["kubano <jakubno3ak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
transformers = "^4.45.2"
datasets = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
